--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@types/next": "^2.4.11",
     "@types/react": "^16.0.36",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
+    "helmet": "^3.14.0",
     "next": "^7.0.2",
     "next-with-typescript": "1.0.0",
     "react": "^16.6.0",
