--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@types/next": "^2.4.11",
-    "@types/react": "^16.0.36",
+    "@types/react": "^16.4.18",
+    "@zeit/next-sass": "^1.0.1",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "next": "^7.0.2",
     "next-with-typescript": "1.0.0",
+    "node-sass": "^4.9.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "ts-loader": "5.1.1",
