--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
     "dev": "nodemon src/server/index.ts",
     "build": "next build src/client",
     "start": "NODE_ENV=production ts-node --compilerOptions '{\"module\":\"commonjs\"}' src/server/index.ts",
+    "validate": "npm run lint && npm run test",
     "lint": "tslint -c tslint.json 'src/**/*.ts*'",
-    "lint:fix": "tslint -c tslint.json 'src/**/*.ts*' --fix"
+    "lint:fix": "tslint -c tslint.json 'src/**/*.ts*' --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@types/next": "^2.4.11",
     "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^9.3.1",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
@@ -24,7 +30,14 @@
     "typescript-babel-jest": "^1.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "^9.3.1",
+    "@types/enzyme": "^3.1.14",
+    "@types/jest": "^23.3.9",
+    "@zeit/next-typescript": "^1.1.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.17.5",
     "prettier": "1.14.3",
     "tslint": "^5.11.0",
