--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
   "env": {
+    "development": {
+      "presets": ["next/babel", "@zeit/next-typescript/babel"]
+    },
+    "production": {
+      "presets": ["next/babel", "@zeit/next-typescript/babel"]
+    },
     "test": {
       "presets": [
         [
