--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "dev": "nodemon src/server/index.ts",
     "build": "next build src/client",
+    "clean": "rm -rf src/client/.next",
     "start": "NODE_ENV=production ts-node --compilerOptions '{\"module\":\"commonjs\"}' src/server/index.ts",
     "validate": "npm run lint && npm run test",
     "lint": "tslint -c tslint.json 'src/**/*.ts*'",
@@ -20,10 +21,14 @@
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "next": "^7.0.2",
-    "next-with-typescript": "1.0.0",
+    "next-redux-wrapper": "^2.0.0",
     "node-sass": "^4.9.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
     "ts-loader": "5.1.1",
     "ts-node": "^7.0.1",
     "typescript": "latest",
