--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-jest": "^23.6.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "husky": "^1.1.3",
     "jest": "^23.6.0",
     "nodemon": "^1.17.5",
     "prettier": "1.14.3",
