--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dev": "nodemon src/server/index.ts",
     "build": "next build src/client",
     "clean": "rm -rf src/client/.next",
-    "start": "NODE_ENV=production ts-node --compilerOptions '{\"module\":\"commonjs\"}' src/server/index.ts",
+    "start": "NODE_ENV=production ts-node -r tsconfig-paths/register --compilerOptions '{\"module\":\"commonjs\"}' src/server/index.ts",
     "validate": "npm run lint && npm run test",
     "lint": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts*'",
     "lint:fix": "npm run lint -- --fix",
@@ -16,7 +16,9 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^9.3.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
@@ -29,6 +31,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
+    "tsconfig-paths": "^3.6.0",
     "ts-loader": "5.1.1",
     "ts-node": "^7.0.1",
     "typescript": "latest",
@@ -37,7 +40,6 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.9",
-    "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "enzyme": "^3.7.0",
