--- a/package.json
+++ b/package.json
@@ -12,45 +12,45 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@types/next": "^2.4.11",
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+    "@types/next": "^7.0.7",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "autoprefixer": "^9.3.1",
-    "babel-plugin-module-resolver": "^3.1.1",
+    "autoprefixer": "^9.4.7",
+    "babel-plugin-module-resolver": "^3.1.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
-    "helmet": "^3.14.0",
+    "helmet": "^3.15.0",
     "next": "^7.0.2",
     "next-redux-wrapper": "^2.0.0",
-    "node-sass": "^4.9.4",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-redux": "^5.1.0",
+    "node-sass": "^4.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.5",
+    "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
-    "tsconfig-paths": "^3.6.0",
-    "ts-loader": "5.1.1",
-    "ts-node": "^7.0.1",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.2",
+    "tsconfig-paths": "^3.7.0",
     "typescript": "latest",
     "typescript-babel-jest": "^1.0.5"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.14",
-    "@types/jest": "^23.3.9",
+    "@types/enzyme": "^3.1.16",
+    "@types/jest": "^23.3.13",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "husky": "^1.1.3",
-    "jest": "^23.6.0",
-    "nodemon": "^1.17.5",
-    "prettier": "1.14.3",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "babel-jest": "^24.0.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "husky": "^1.3.1",
+    "jest": "^24.0.0",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.16.2",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0",
     "tslint-react-a11y": "^1.0.0"
